Fixes #5 with better spacing and centering

--- a/css/application.scss
+++ b/css/application.scss
@@ -196,3 +196,8 @@ body {
 .flickity-prev-next-button .arrow {
   fill: #48494C;
 }
+
+.carousel-cell {
+  top: 50%;
+  transform: translateY(-50%)
+}
